# aoc-2022

./: .rustfmt.toml  Cargo.toml
outputs/: day07.dot  day07test.dot  day12.dot  day12test.dot
