[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
fxhash = "0.2.1"
itertools = "0.10.5"
nom = "7.1.1"
num = "0.4.0"
palette = "0.6.1"
petgraph = "0.6.2"

[dev-dependencies]
test-case = "2.2.2"
